--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="add_name">UU账号</string>
     <string name="add_name_hint">请输入昵称&#8230;</string>
     <string name="add_gender">性别</string>
+    <string name="add_email">邮箱</string>
+    <string name="add_phone">手机号码</string>
     <string name="add_two_code">二维码名片</string>
     <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
     <string name="scan_allcode_title">二维码或条形码扫描</string>
