--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     
     <string name="add_avator">头像</string>
     <string name="add_nick">昵称</string>
-    <string name="add_name">UU账号</string>
+    <string name="add_name">账号</string>
     <string name="add_name_hint">请输入昵称&#8230;</string>
     <string name="add_gender">性别</string>
     <string name="add_email">邮箱</string>
