--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_name">UU</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="login_username_hint">请输入用户名&#8230;</string>
-    <string name="login_password_hint">请输入密码&#8230;</string>
-    <string name="login_email_hint">请再次输入密码&#8230;</string>
+    <string name="login_username_hint">请输入用户名/手机/邮箱</string>
+    <string name="login_password_hint">请输入密码</string>
+    <string name="login_email_hint">请再次输入密码</string>
     <string name="login">登录</string>
     <string name="register">注册</string>
     <string name="register_txt1">还没有账号？</string>
@@ -14,7 +14,7 @@
     <string name="login_account">账号 </string>
     <string name="login_pwd">密码 </string>
     <string name="login_email">确认密码 </string>
-    <string name="message_search_hint">搜索&#8230;</string>
+    <string name="message_search_hint">搜索</string>
 
     <string name="main_tab_recent">消息</string>
     <string name="main_tab_contact">联系人</string>
@@ -30,7 +30,7 @@
     <string name="add_avator">头像</string>
     <string name="add_nick">昵称</string>
     <string name="add_name">账号</string>
-    <string name="add_name_hint">请输入昵称&#8230;</string>
+    <string name="add_name_hint">请输入昵称</string>
     <string name="add_gender">性别</string>
     <string name="add_email">邮箱</string>
     <string name="add_phone">手机号码</string>
