--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">UU</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="login_username_hint">请输入用户名/手机/邮箱</string>
+    <string name="login_user_hint">请输入用户名/手机/邮箱</string>
+    <string name="login_username_hint">请输入用户名</string>
     <string name="login_password_hint">请输入密码</string>
     <string name="login_email_hint">请再次输入密码</string>
     <string name="login">登录</string>
